<resources>
    <string name="app_name">Antwerp City Guide</string>
    <string name="tab_text_1">Shop</string>
    <string name="tab_text_2">Drink</string>
    <string name="tab_text_3">Eat</string>
    <string name="tab_text_4">Sleep</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="weekday1">Monday</string>
    <string name="weekday2">Tuesday</string>
    <string name="weekday3">Wednesday</string>
    <string name="weekday4">Thursday</string>
    <string name="weekday5">Friday</string>
    <string name="weekday6">Saturday</string>
    <string name="weekday7">Sunday</string>
</resources>
