<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fillViewport="true">
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.android.tourguideapp.MainActivity">

    <ImageView
        android:id="@+id/listItemDetail_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitCenter"/>
    <TextView
        android:id="@+id/listItemDetail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/listItemDetail_img"
        android:layout_alignStart="@id/listItemDetail_img"
        android:layout_below="@id/listItemDetail_img"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="Man van Melle fanshop"
        android:textSize="@dimen/itemDetail_titleSize"
        />
    <TextView
        android:id="@+id/listItemDetail_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/listItemDetail_title"
        android:layout_alignStart="@id/listItemDetail_title"
        android:layout_below="@id/listItemDetail_title"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="Koekoekstraat 125"
        android:textSize="@dimen/itemDetail_textSize"
        />
    <TextView
        android:id="@+id/listItemDetail_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/listItemDetail_location"
        android:layout_alignStart="@id/listItemDetail_location"
        android:layout_below="@id/listItemDetail_location"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="placeHolderTelephoneNumber"
        android:textSize="@dimen/itemDetail_textSize"

        />

    <TextView
        android:id="@+id/listItemDetail_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/listItemDetail_location"
        android:layout_alignStart="@id/listItemDetail_location"
        android:layout_below="@id/listItemDetail_location"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="DescriptionPlaceHolderText"
        android:textSize="@dimen/itemDetail_descriptionSize"/>

    <LinearLayout
        android:id="@+id/openingHoursContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/listItemDetail_description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:orientation="vertical">

            <TextView
            android:id="@+id/mondayTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/weekday1"
            android:textSize="@dimen/itemDetail_textSize"
            android:textStyle="bold" />

            <TextView
            android:id="@+id/mondayHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/itemDetail_textSize"
                />

            <TextView
            android:id="@+id/tuesdayTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weekday2"
            android:textSize="@dimen/itemDetail_textSize"
                android:textStyle="bold"
            />

            <TextView
            android:id="@+id/tuesdayHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/itemDetail_textSize"
            />

            <TextView
            android:id="@+id/wednesdayTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weekday4"
            android:textSize="@dimen/itemDetail_textSize"
                android:textStyle="bold"
            />

            <TextView
            android:id="@+id/wednesdayHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/itemDetail_textSize"
            />

            <TextView
                android:id="@+id/thursdayTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weekday4"
            android:textSize="@dimen/itemDetail_textSize"
            android:textStyle="bold"
            />

            <TextView
            android:id="@+id/thursdayHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/itemDetail_textSize"
            />

            <TextView
                android:id="@+id/fridayTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weekday5"
            android:textSize="@dimen/itemDetail_textSize"
            android:textStyle="bold"
            />

            <TextView
            android:id="@+id/fridayHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/itemDetail_textSize"
            />

            <TextView
                android:id="@+id/saturdayTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weekday6"
                android:textStyle="bold"
                android:textSize="@dimen/itemDetail_textSize"
            />
    <TextView
        android:id="@+id/saturdayHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/sundayTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weekday7"
        android:textStyle="bold"
        android:textSize="@dimen/itemDetail_textSize"
        />
    <TextView
        android:id="@+id/sundayHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/itemDetail_textSize"
        />
    </LinearLayout>
</RelativeLayout>
</ScrollView>